# YarDB

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  server-interface.md
src/: ast.rs  cli.rs  constants.rs  lib.rs  main.rs  page.rs  pager.rs  parser.rs  row.rs  server.rs  table.rs
